Switch to Scala 2.12.6, replace circe by jsoniter-scala, tune JVM options, shorten warmup and measure time