@@ -1,31 +1,40 @@
 package com.github.saint1991.samples
 
-import io.circe._
-import io.circe.generic.auto._
-import io.circe.parser._
-import io.circe.syntax._
-import org.openjdk.jmh.annotations.{Benchmark => JmhBenchmark, BenchmarkMode, Mode, Scope, State}
+import java.util.concurrent.TimeUnit
 
-@State(Scope.Benchmark)
+import com.github.plokhotnyuk.jsoniter_scala.macros._
+import com.github.plokhotnyuk.jsoniter_scala.core._
+import org.openjdk.jmh.annotations.{BenchmarkMode, Fork, Measurement, Mode, OutputTimeUnit, Scope, State, Warmup, Benchmark => JmhBenchmark}
+
+@State(Scope.Thread)
+@Warmup(iterations = 10, time = 1, timeUnit = TimeUnit.SECONDS)
+@Measurement(iterations = 10, time = 1, timeUnit = TimeUnit.SECONDS)
+@Fork(value = 1, jvmArgs = Array(
+  "-server",
+  "-Xms2g",
+  "-Xmx2g",
+  "-XX:NewSize=1g",
+  "-XX:MaxNewSize=1g",
+  "-XX:InitialCodeCacheSize=512m",
+  "-XX:ReservedCodeCacheSize=512m",
+  "-XX:+UseParallelGC",
+  "-XX:-UseBiasedLocking",
+  "-XX:+AlwaysPreTouch"
+))
+@OutputTimeUnit(TimeUnit.SECONDS)
 class JsonBench {
-
   final val N = 100000
   val dataset = DataSet.createDataset(N)
 
-  implicit val encoder = Encoder.enumEncoder(SpotType)
-  implicit val decoder = Decoder.enumDecoder(SpotType)
+  implicit val codec = JsonCodecMaker.make[Nobid](CodecMakerConfig())
 
   val encodedDataset = encode()
   decode()
 
   @JmhBenchmark @BenchmarkMode(Array(Mode.AverageTime))
-  def encode(): Seq[String] = {
-    dataset.map(_.asJson.noSpaces)
-  }
+  def encode(): Seq[Array[Byte]] = dataset.map(x => writeToArray(x))
 
   @JmhBenchmark @BenchmarkMode(Array(Mode.AverageTime))
-  def decode(): Seq[Nobid] = {
-    encodedDataset.map(str => parse(str).right.get.as[Nobid].right.get)
-  }
+  def decode(): Seq[Nobid] = encodedDataset.map(str => readFromArray(str))
 }
 
